# Harnessing

./: .gitignore  README.md  pyproject.toml
docs/: README.md
docs/direction/: ROADMAP.md  VISION.md
docs/planning/: BACKLOG.md
docs/status/: CHANGELOG.md  CURRENT.md
docs/tech-specs/: ARCHITECTURE.md  CONSUMER-INTEGRATION-CONTRACT.md  DUAL-TRACK-OPERATING-MODEL.md  PLATFORM-SUPPORT.md  SESSION-RESTART-WORKFLOW.md  TRANSCRIPT-INGESTION-SPEC.md
docs/testing/: SMOKE-TEST.md  TRANSCRIPT-INGESTION-TEST.md
src/harnessing/: cli.py
