[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harnessing"
version = "0.1.0"
description = "Shared memory harness for Codex and Claude Code workflows"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "tygwan" }]
dependencies = []

[project.scripts]
harnessing = "harnessing.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
